Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124084

[Reg 6.5.3->6.7.0] Nested ListModel set from c++ is not working any more

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.1, 6.8.0 FF
    • 6.7.0
    • None
    • Windows 11 Pro 23H2 / build: 22631.3374
      CPU: Intel Core i7-8750H
      GPU: Intel UHD Graphics 630
      RAM: 16 GB
      Qt Version: 6.5.3 and 6.7.0 msvc2019_64
    • Windows
    • 07cfd1b9e (dev), 2fe24a672 (6.7)

    Description

      We use nested QVariantLists/Maps to pass a model from the c++ side to QML.

      this worked fine in 6.5.3, but no longer works in 6.7.0

      see attached sample project and attached screenshots

      Attachments

        1. NestedModels.zip
          3 kB
        2. qt-6-5-3.png
          qt-6-5-3.png
          19 kB
        3. qt-6-7-0.png
          qt-6-7-0.png
          16 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            basti_4tiitoo Bastian Wolfgruber
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes