ListModel: Treat QV4::Sequence and QV4::QmlListWrapper like arrays

Pick-to: 6.7
Fixes: QTBUG-124084
Change-Id: I99f900b71d71f33f807f5f69829bb9ef760b40c8
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>